--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,14 @@
   }
 }
 
+* {
+  cursor: none;
+}
+
+/* html {
+  scroll-behavior: smooth;
+} */
+
 body {
   background: var(--background);
   color: var(--foreground);
