--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,9 +23,9 @@
   cursor: none;
 }
 
-/* html {
-  scroll-behavior: smooth;
-} */
+html {
+  scroll-behavior: auto;
+}
 
 body {
   background: var(--background);
